
  * Local_Theory.begin_nested replaces Local_Theory.open_target.

  * Local_Theory.end_nested replaces Local_Theory.close_target.

  * Combination of Local_Theory.begin_nested and
    Local_Theory.end_nested(_result) replaces
    Local_Theory.subtarget(_result).

INCOMPATIBILITY.

* Local_Theory.init replaces Generic_Target.init.  Minor INCOMPATIBILITY.


*** HOL ***

* Session "Hoare" now provides a total correctness logic as well.

* An updated version of the veriT solver is now included as Isabelle
component. It can be used in the "smt" proof method via "smt (verit)" or
via "declare [[smt_solver = verit]]" in the context; see also session
HOL-Word-SMT_Examples.

* Zipperposition 2.0 is included as Isabelle component for
experimentation, e.g. in "sledgehammer [prover = zipperposition]".

* Nitpick/Kodkod may be invoked directly within the running
Isabelle/Scala session (instead of an external Java process): this
improves reactivity and saves resources. This experimental feature is
guarded by system option "kodkod_scala" (default: true).

* Session HOL-Examples contains notable examples for Isabelle/HOL
(former entries of HOL-Isar_Examples, HOL-ex etc.).

* Simproc "defined_all" and rewrite rule "subst_all" perform more
aggressive substitution with variables from assumptions.
INCOMPATIBILITY, consider repairing proofs locally like this:

  supply subst_all [simp del] [[simproc del: defined_all]]

* Simproc "datatype_no_proper_subterm" rewrites equalities "lhs = rhs"
on datatypes to "False" if either side is a proper subexpression of the
other (for any datatype with a reasonable size function).

* New constant "power_int" for exponentiation with integer exponent,
written as "x powi n".

* Added the "at most 1" quantifier, Uniq.

* For the natural numbers, Sup {} = 0.

* Updated the Metis prover underlying the "metis" proof method to
  version 2.4 (release 20180810). The new version fixes one soundness